--- a/projects/items/3d.html
+++ b/projects/items/3d.html
@@ -38,45 +38,45 @@
             <h1>3-D Modeling Miniature City</h1>
             <h4>Using Autodesk Maya, I modeled, surfaced, rendered, and aniamted a bus as well as a miniature city around it.</h4>
             <p>role: 3-d modeling, animation, computer aided design</p>
-            <a href="" target="_blank" class="button">view video</a>
+            <a href="https://drive.google.com/file/d/1VuajQzwaMNS2QIAoze9RKBZ4umoZluTf/view?usp=share_link" target="_blank" class="button">view video</a>
         </div>
-        <image src="/projects/images/3dside.jpg"></image>
+        <image src="/projects/images/3dtop.jpeg"></image>
     </div>
 
     <div class="finalproduct">
-        <image src="/projects/images/computer.png"></image>
-    </div>
-
-    <!-- <div class="presentation">
-        <h1 class="title">presentation + brand guide.</h1>
-        <image class="image" src="/projects/images/brandoohlala.png"></image>
-        <p class="text">We created a brand kit and presentation for the owners of Ooh La La Panini, taking inspiration from their menu and their store aesthetic. </p>
+        <image src="/projects/images/3dside.jpg"></image>
     </div>
 
     <div class="colors">
-        <h1 class="title">colors and typography.</h1>
+        <h1 class="title">reference photos.</h1>
         <div class="color">
-            <image src="/projects/images/oohlalacolor.png"></image>
-            <p>The colors were selected from their Instagram account and Yelp page. We incorporated six different shades that represent their minimalistic theme.</p>
+            <image src="/projects/images/buildings.jpeg"></image>
+            <p>I took inspiration for my miniature town square from the historic buildings from Gamla Stan in Stockholm, Sweden.</p>
         </div>
         <div class="typography">
-            <p>The typography was taken from their menu font, and alternate fonts that we thought would fit their aesthetic.</p>
-            <image src="/projects/images/oohlalatypography.png"></image>
+            <p>The bus model was inspired by New York City buses and bus stops, specifically the Hyundai Universe.</p>
+            <image src="/projects/images/busmodel.jpeg"></image>
         </div>
     </div>
 
     <div class="figma">
-        <h1 class="title">wireframing with figma.</h1>
-        <p class="text">We used Figma, an application for user interface design, to wireframe and plot out the main points of the site.</p>
-        <image class="image" src="/projects/images/oohlalafigma.png"></image>
+        <h1 class="title">modeling.</h1>
+        <p class="text">Creating the shape of the bus was the hardest part, which included modeling all the tiny details.</p>
+        <image class="image" src="/projects/images/modeling.png"></image>
+    </div>
+
+    <div class="presentation">
+        <h1 class="title">surfacing.</h1>
+        <image class="image" src="/projects/images/surfacing.png"></image>
+        <p class="text">I surfaced each individual structure of the bus, bus stop, and buildings with different materials.</p>
     </div>
 
     <div class="wix">
-        <h1 class="title">demo.</h1>
-        <p class="text">Since the owners had to continuously update the site and use the online ordering interface, we choose to develop the website with Wix.</p>
-        <video src="/projects/images/oohlalavid.mov" autoplay muted loop></video>
-        <a href="https://alyssaycheng157.wixsite.com/ooh-la-la-panini" target="_blank" class="button2">view live</a>
-    </div> -->
+        <h1 class="title">video.</h1>
+        <p class="text">After modeling, surfacing, and lighting, I used the animation features in Maya to create a drone-like rendering video with music in the background, edited with Final Cut Pro.</p>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/1JWQlsGojbY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        <a href="https://drive.google.com/file/d/1VuajQzwaMNS2QIAoze9RKBZ4umoZluTf/view?usp=share_link" target="_blank" class="button2">view live</a>
+    </div>
 
     <div class="buttons">
         <a href="skin.html">previous project</a>
