--- a/projects/items/creativecoding.html
+++ b/projects/items/creativecoding.html
@@ -38,7 +38,7 @@
             <h1>Creative Coding Research</h1>
             <h4>Creative coding and AI for social change — in-depth research on the positive and negative impacts of creative computing and artificial intelligence on societal transformation</h4>
             <p>role: research into coding and ai, arcGIS storymaps, digital storytelling</p>
-            <a href="https://storymaps.arcgis.com/stories/09a0d47bb5304847bec6184cbe51a26a/preview" target="_blank" class="button">view live</a>
+            <a href="https://arcg.is/1iXmzX" target="_blank" class="button">view live</a>
         </div>
         <image src="/projects/images/ccside.jpeg"></image>
     </div>
@@ -74,8 +74,11 @@
     <div class="wix">
         <h1 class="title">demo.</h1>
         <p class="text">Using ArcGIS Storymaps, I combined all of my research and analyses into an interactive storytelling experience.</p>
-        <video src="/projects/images/ccvid.mov" autoplay muted loop></video>
-        <a href="https://storymaps.arcgis.com/stories/09a0d47bb5304847bec6184cbe51a26a/preview" target="_blank" class="button2">view live</a>
+        <!-- <video src="/projects/images/ccvid.mov" autoplay muted loop></video> -->
+        <p class="text">Scroll below!</p>
+        <iframe src="https://storymaps.arcgis.com/stories/09a0d47bb5304847bec6184cbe51a26a" width="80%" height="500px" frameborder="0" allowfullscreen allow="geolocation"></iframe>
+        <a href="https://arcg.is/1iXmzX" target="_blank" class="button2">view live</a>
+
     </div>
 
     <div class="buttons">
