--- a/projects/items/globalcitizen.html
+++ b/projects/items/globalcitizen.html
@@ -38,13 +38,13 @@
             <h1>Global Citizen</h1>
             <h4>A project combining cultural values and web development — two of my favorite things. Along with a peer, we developed an online interactive curriculum that teaches young people how complex modern societies really are.</h4>
             <p>role: research into culture and international relations, web development</p>
-            <a href="https://www.figma.com/proto/ymlnzO5eSBXtQ9ctb6qyfw/home-page?node-id=306%3A3&scaling=scale-down&page-id=0%3A1&starting-point-node-id=306%3A3" target="_blank" class="button">view live</a>
+            <a href="https://globalcitizen.cargo.site" target="_blank" class="button">view live</a>
         </div>
         <image src="/projects/images/gcside.png"></image>
     </div>
 
     <div class="finalproduct">
-        <image class="image1" src="/projects/images/computer.png"></image>
+        <image class="image" src="/projects/images/gcfinal.png"></image>
     </div>
 
     <div class="colors">
@@ -72,7 +72,11 @@
     </div> -->
 
     <div class="wix">
-        <a href="https://www.figma.com/proto/ymlnzO5eSBXtQ9ctb6qyfw/home-page?node-id=306%3A3&scaling=scale-down&page-id=0%3A1&starting-point-node-id=306%3A3" target="_blank" class="button2">view live</a>
+        <h1 class="title">demo.</h1>
+        <p class="text">Using Cargo and Vev Design, I created an interactive game-like homepage that gathers together all of my research.</p>
+        <p class="text">Scroll below!</p>
+        <iframe src="https://globalcitizen.cargo.site" width="80%" height="500px" frameborder="0" allowfullscreen></iframe>
+        <a href="https://globalcitizen.cargo.site" target="_blank" class="button2">view live</a>
     </div>
 
     <div class="buttons">
