--- a/projects/items/oohlala.html
+++ b/projects/items/oohlala.html
@@ -38,7 +38,7 @@
             <h1>Ooh La La Panini Website</h1>
             <h4>Ooh La La Panini is a small restaurant in Santa Clarita that specializes in gourmet café style food. The goal of this project was to create an interactive website that showcases their restaurant, as well as develop an ordering system for online purchases.</h4>
             <p>role: ui/ux design, web design, figma wireframing, branding guide, presentation</p>
-            <a href="https://alyssaycheng157.wixsite.com/ooh-la-la-panini" target="_blank" class="button">view live</a>
+            <a href="https://oohlalapanini.square.site/" target="_blank" class="button">view live</a>
         </div>
         <image src="/projects/images/sideoohlala.png"></image>
     </div>
@@ -73,9 +73,11 @@
 
     <div class="wix">
         <h1 class="title">demo.</h1>
-        <p class="text">Since the owners had to continuously update the site and use the online ordering interface, we choose to develop the website with Wix.</p>
-        <video src="/projects/images/oohlalavid.mov" autoplay muted loop></video>
-        <a href="https://alyssaycheng157.wixsite.com/ooh-la-la-panini" target="_blank" class="button2">view live</a>
+        <p class="text">Since the owners had to continuously update the site and use the online ordering interface, we choose to develop the website with Square.</p>
+        <!-- <video src="/projects/images/oohlalavid.mov" autoplay muted loop></video> -->
+        <p class="text">Scroll down!</p>
+        <iframe src="https://oohlalapanini.square.site/" width="80%" height="500px" frameborder="0" allowfullscreen allow="geolocation"></iframe>
+        <a href="https://oohlalapanini.square.site/" target="_blank" class="button2">view live</a>
     </div>
 
     <div class="buttons">
