--- a/projects/items/rise.html
+++ b/projects/items/rise.html
@@ -38,45 +38,49 @@
             <h1>Rise</h1>
             <h4>Skin cancer, especially from sun exposure, is a huge problem in the US. With two peers, I modeled a sun protection curriculum from Australia's programs for young kids. We also 3-D rendered a hypothetical sunscreen product that would be more accessible to the public.</h4>
             <p>role: research, 3-d modeling, presentation</p>
-            <a href="" class="button">view live</a>
+            <a href="https://www.canva.com/design/DAFY4R9b8aA/NLNrtNtNf7Ry_6JHgXXuCw/view" class="button" target="_blank">curriculum</a>
+            <a href="https://www.risesunscreen.squarespace.com" class="button button3" target="_blank">view website</a>
         </div>
-        <image src="/projects/images/riseside.jpeg"></image>
+        <image src="/projects/images/siderise.png"></image>
     </div>
 
     <div class="finalproduct">
-        <image src="/projects/images/computer.png"></image>
+        <image class="image" src="/projects/images/risefinal.png"></image>
     </div>
 
-    <!-- <div class="colors">
-        <h1 class="title">research.</h1>
+    <div class="colors">
+        <h1 class="title">3-d modeling.</h1>
         <div class="color">
-            <image src="/projects/images/ccresearch1.png"></image>
-            <p>I did research on the history of computer science and created a timeline of important events. The information was organized on Milanote, a tool for organizing creative projects.</p>
-        </div>
-        <div class="typography">
-            <p>I also took a deep dive into the history of artificial intelligence as well as the most advanced current AI systems that are in use.</p>
-            <image src="/projects/images/ccresearch2.png"></image>
+            <image src="/projects/images/riseresearch.png"></image>
+            <p>Using Milanote as an organizational tool, we researched sunscreen's history, ingredients, and applications.</p>
         </div>
     </div>
 
     <div class="figma">
-        <h1 class="title">asking an ai.</h1>
-        <p class="text">Since I was doing research about artificial intelligence, I was curious to see what an actual AI would think of the impact of creative coding to the world. I used ChatGPT, an advanced chatbot made by OpenAI.</p>
-        <image src="/projects/images/ccai.png"></image>
+        <h1 class="title">making the curriculum.</h1>
+        <p class="text">Using the research that we compiled, we created a kid-friendly curriculum on the importance of sunscreen.</p>
+        <div style="position: relative; width: 60%; height: 100%; padding-top: 56.2500%; display: block; margin: auto;
+ padding-bottom: 0; margin-top: 1.6em; margin-bottom: 0.9em; overflow: hidden;
+ border-radius: 8px; will-change: transform">
+  <iframe loading="lazy" style="position: absolute; width: 100%; height: 100%; top: 0; left: 0; border: none; padding: 0;margin: 0;"
+    src="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAFY4R9b8aA&#x2F;view?embed" allowfullscreen="allowfullscreen" allow="fullscreen">
+  </iframe>
+</div>
+<a href="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAFY4R9b8aA&#x2F;view?utm_content=DAFY4R9b8aA&amp;utm_campaign=designshare&amp;utm_medium=embeds&amp;utm_source=link" target="_blank" rel="noopener"></a>
     </div>
 
     <div class="presentation">
-        <h1 class="title">analyzing data.</h1>
-        <image class="image" src="/projects/images/ccanalyze.png"></image>
-        <p class="text">After gathering all the research, I analyzed the information regarding the ethics of AI. </p>
+        <h1 class="title">the product.</h1>
+        <iframe class="model" src='https://my.spline.design/untitledcopy-8014ce27aadd8a3086c30fafcffe77ef/' frameborder='0' width='80%' height='100%'></iframe>
+        <p class="text">We used Spline to make a hypothetical sunscreen product for a business that includes branding and product information.</p>
     </div>
 
     <div class="wix">
-        <h1 class="title">demo.</h1>
-        <p class="text">Using ArcGIS Storymaps, I combined all of my research and analyses into an interactive storytelling experience.</p>
-        <video src="/projects/images/ccvid.mov" autoplay muted loop></video>
-        <a href="https://storymaps.arcgis.com/stories/09a0d47bb5304847bec6184cbe51a26a/preview" target="_blank" class="button2">view live</a>
-    </div> -->
+        <h1 class="title">website.</h1>
+        <p class="text">Using Squarespace, we made a website to combine all our research, branding, curriculum, and product renderings.</p>
+        <video src="/projects/images/risefinal.mov" autoplay muted loop></video>
+        <a href="https://risesunscreen.squarespace.com" target="_blank" class="button2">view live</a>
+    </div>
 
     <div class="buttons">
         <a href="personal.html">previous project</a>
