--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             </ul>
         </nav>
         <iframe src='https://my.spline.design/miniroommusiccopy-5244fdf1e04ac8a080fb9ba7feaae1ac/' frameborder='0' width='100%' height='100%'></iframe>
-        <div class="blocker"></div>
+        <!-- <div class="blocker"></div> -->
         <div class="biotext">
             <h1>ALYSSA</h1>
             <h1 class="lastname">CHENG</h1>
