--- a/projects/items/dyw.html
+++ b/projects/items/dyw.html
@@ -38,14 +38,14 @@
             <h1>Design Your World</h1>
             <h4>With a team, I coded a website for a project called Design Your World, which displays students' 3-D modeled "safe spaces" in the ideology of escapism.</h4>
             <p>role: collaborative coding with html/css, figma wireframing</p>
-            <a href="" class="button">view live</a>
-            <a href="" class="button button3">github repo</a>
+            <a href="https://designyourwrld.com/" target="_blank" class="button">view live</a>
+            <a href="https://github.com/alyssacheng15/Design-Your-World" target="_blank" class="button button3">github repo</a>
         </div>
         <image src="/projects/images/dywside.png"></image>
     </div>
 
     <div class="finalproduct">
-        <image class="image2" src="/projects/images/computer.png"></image>
+        <image class="image2" src="/projects/images/dywfinal.png"></image>
     </div>
 
     <div class="figma">
@@ -61,10 +61,9 @@
     </div>
 
     <div class="wix">
-        <!-- <h1 class="title">demo.</h1>
-        <p class="text"></p>
-        <video src="/projects/images/fmvid.mov" autoplay muted loop></video> -->
-        <a href="" class="button2">view live</a>
+        <h1 class="title">demo.</h1>
+        <iframe src="https://designyourwrld.com/" width="80%" height="500px" frameborder="0" allowfullscreen></iframe>
+        <a href="https://designyourwrld.com/" class="button2">view live</a>
     </div>
 
     <div class="buttons">
