--- a/projects/items/personal.html
+++ b/projects/items/personal.html
@@ -45,7 +45,7 @@
     </div>
 
     <div class="finalproduct">
-        <image class="image image2" src="/projects/images/computer.png"></image>
+        <image class="image image2" src="/projects/images/pwfinal.png"></image>
     </div>
 
     <div class="presentation">
@@ -77,7 +77,17 @@
         <p class="text">At the end, I had over a dozen code files, and thousands of lines of code.</p>
     </div>
 
+    <div class="figma">
+        <h1 class="title">3-d modeling.</h1>
+        <p class="text">Using Spline, I modeled and surface a 3-D rendering of a workspace with all my favorite things — music, coding, and travel.</p>
+        <iframe class="model" src='https://my.spline.design/miniroommusiccopy-5244fdf1e04ac8a080fb9ba7feaae1ac/' frameborder='0' width='100%' height='400%'></iframe>
+    </div>
+
     <div class="wix">
+        <h1 class="title">demo.</h1>
+        <p class="text">After dozens of hours of coding, modeling, and designing, I deployed my website using Netlify.</p>
+        <p class="text">Scroll down!</p>
+        <iframe class="iframe" src="https://alyssacheng.space" width="80%" height="500px" frameborder="0" allowfullscreen allow="geolocation"></iframe>
         <a href="/index.html" target="_blank" class="button2">view live</a>
     </div>
 
@@ -89,7 +99,7 @@
 
     <footer>
         <div class="footer_text" id="footer">
-            <p>© 2022 | Designed and coded by Alyssa Cheng</p>
+            <p>© 2023 | Designed and coded by Alyssa Cheng</p>
         </div>
         <div class="footer_icons">
             <a href="mailto:alyssaycheng15@gmail.com" target="_blank">
