--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <li><a href="/index.html#skills">skills</a></li>
                 <li><a href="/projects/projects.html">projects</a></li>
                 <li><a href="/index.html#footer">contact</a></li>
-                <li><a href="/images/Alyssa Cheng - Curriculum Vitae.pdf" target="_blank">cv</a></li>
+                <li><a href="/images/Alyssa_Cheng_Resume.pdf" target="_blank">resume</a></li>
             </ul>
         </nav>
         <iframe src='https://my.spline.design/miniroommusiccopy-5244fdf1e04ac8a080fb9ba7feaae1ac/' frameborder='0' width='100%' height='100%'></iframe>
@@ -57,15 +57,17 @@
         </div>
         <div class="summary_text">
             <h1>
-                I  am a <font color="#c28d84">creative coder</font> and <font color="#c28d84">entrepreneur</font> that uses my skills to innovate, create, 
-                and focus on <font color="#c28d84">social change/sustainability</font> of the world through digital media. I'm also 
-                passionate about exploring diverse <font color="#c28d84">cultures</font>, languages, and international relations in 
-                order to broaden my perspective of the world and its people.
+                Hi! I'm <font color="#c28d84">Alyssa</font>, a student at UC Berkeley intending to study <font color="#c28d84">Computer Science + 
+                    Cognitive Science</font> with a minor of <font color="#c28d84">Data Science</font>. My interests center around
+                    <font color="#c28d84">artificial intelligence and machine learning</font>, specifically in predictive modeling and
+                    natural language processing. My goal is to harness these skills to develop <font color="#c28d84">data-driven solutions</font> 
+                    addressing global challenges in crucial fields like sustainability,
+                    healthcare, and education.
             </h1>
         </div>
 
         <div class="summary_button">
-            <a href="/images/Alyssa Cheng - Curriculum Vitae.pdf" target="_blank">curriculm vitae</a>
+            <a href="/images/Alyssa_Cheng_Resume.pdf" target="_blank">curriculm vitae</a>
         </div>
  
         <a href="#projects" class="arrow">
