--- a/projects/items/3d.html
+++ b/projects/items/3d.html
@@ -38,7 +38,7 @@
             <h1>3-D Modeling Miniature City</h1>
             <h4>Using Autodesk Maya, I modeled, surfaced, rendered, and aniamted a bus as well as a miniature city around it.</h4>
             <p>role: 3-d modeling, animation, computer aided design</p>
-            <a href="https://drive.google.com/file/d/1VuajQzwaMNS2QIAoze9RKBZ4umoZluTf/view?usp=share_link" target="_blank" class="button">view video</a>
+            <a href="https://www.youtube.com/watch?v=1JWQlsGojbY" target="_blank" class="button">view video</a>
         </div>
         <image src="/projects/images/3dtop.jpeg"></image>
     </div>
@@ -75,7 +75,7 @@
         <h1 class="title">video.</h1>
         <p class="text">After modeling, surfacing, and lighting, I used the animation features in Maya to create a drone-like rendering video with music in the background, edited with Final Cut Pro.</p>
         <iframe width="560" height="315" src="https://www.youtube.com/embed/1JWQlsGojbY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-        <a href="https://drive.google.com/file/d/1VuajQzwaMNS2QIAoze9RKBZ4umoZluTf/view?usp=share_link" target="_blank" class="button2">view live</a>
+        <a href="https://www.youtube.com/watch?v=1JWQlsGojbY" target="_blank" class="button2">view live</a>
     </div>
 
     <div class="buttons">
