--- a/projects/projects.html
+++ b/projects/projects.html
@@ -154,20 +154,7 @@
                 <h4>autodesk maya, arnold render, 3-D design</h4>
                 <p>Utilized Autodesk Maya Software to 3-D model, render, and animate a bus and a surrounding miniature city</p>
                 <a href="/projects/items/3d.html" class="button">my process</a>
-                <a href="" target="_blank" class="button">visit site</a>
-            </div>
-        </div>
-
-        <div class="item">
-            <div class="description2">
-                <h2>Skills For Tomorrow — Web Developer</h2>
-                <h4>collaborative web design, figma</h4>
-                <p>Curated virtual toolkit that aims to equip young people with the necessary resources and information that they need in order to navigate our rapidly-changing workforce and college</p>
-                <a href="/projects/items/sft.html" class="button">my process</a>
-                <a href="https://shaunpaulthomas.wixsite.com/sixfeetskills" target="_blank" class="button">visit site</a>
-            </div>
-            <div class="image2">
-                <image src="images/skills.png"></image>
+                <a href="https://www.youtube.com/watch?v=1JWQlsGojbY" target="_blank" class="button">visit site</a>
             </div>
         </div>
     </div>
